--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,8 @@ name: Hugo Auto Push
 
 on:
     push:
-    workflow_dispatch:
+      branches:
+        - master  # 或者是你的源代码分支
     # schedule:
     #     # Runs everyday at 8:00 AM
     #     - cron: "0 0 * * *"
@@ -12,13 +13,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/[email protected]
-              # with:
-              #     submodules: false
-              #     fetch-depth: 0
+              uses: actions/checkout@v2
+              with:
+                  submodules: True
+                  fetch-depth: 0
 
             - name: Setup Hugo
-              uses: peaceiris/[email protected]
+              uses: peaceiris/actions-hugo@v2
               with:
                   hugo-version: "latest"
 
@@ -26,7 +27,7 @@ jobs:
               run: hugo
 
             - name: Deploy Web
-              uses: peaceiris/[email protected]
+              uses: peaceiris/actions-gh-pages@v3
               with:
                   deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }} # secret 中设置好私钥
                   EXTERNAL_REPOSITORY: sub-chandra/sub-chandra.github.io
