--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,9 +14,9 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v2
-              with:
-                  submodules: True
-                  fetch-depth: 0
+              # with:
+              #     submodules: True
+              #     fetch-depth: 0
 
             - name: Setup Hugo
               uses: peaceiris/actions-hugo@v2
