--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,9 +13,10 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v2
-              # with:
-              #     submodules: True
-              #     fetch-depth: 0
+              with:
+                  submodules: True
+                  fetch-depth: 0
+                  
             - name: Setup Hugo
               uses: peaceiris/actions-hugo@v2
               with:
@@ -23,7 +24,7 @@ jobs:
 
             - name: Build Web
               run: hugo
-              
+
             - name: Deploy Web
               uses: peaceiris/actions-gh-pages@v3
               with:
