--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,4 @@
 baseURL = 'https://sub-chandra.github.io/'
 languageCode = 'en-us'
-title = "Chandrasekhar\'s Blog"
+title = "Chandrasekhar's Blog"
 theme = 'ananke'
-paginate = 10
-
-# home/category/tag (Default: 70)
-summaryLength = 50
