--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,17 @@ baseURL = 'https://sub-chandra.github.io/'
 languageCode = 'en-us'
 title = "Chandrasekhar's Blog"
 theme = 'ananke'
+
+[params]
+  text_color = ""
+  author = ""
+  favicon = ""
+  site_logo = ""
+  description = ""
+  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  recent_posts_number = 10
+
+[[params.ananke_socials]]
+name = "twitter"
+url = "https://twitter.com/ChandraOpenAcc"
