--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ theme = 'ananke'
   site_logo = ""
   description = ""
   # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
+  background_color_class = "bg-blue"
   recent_posts_number = 10
 
 [[params.ananke_socials]]
