--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,10 @@ hasCJKLanguage = true  # 加载中文
 # SectionPagesMenu = "main"
 # home/category/tag 页面用于摘要的字数 (Default: 70)
 summaryLength = 100
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
 
 
 [params]
